--- a/src/main/resources/assets/ht_laboratory/lang/en_us.json
+++ b/src/main/resources/assets/ht_laboratory/lang/en_us.json
@@ -1,3 +1,5 @@
 {
+  "block.ht_laboratory.mortar": "Mortar",
+  "block.ht_laboratory.porcelain": "Porcelain",
   "container.ht_laboratory.mortar": "Mortar"
 }
