Update HT Materials to 1.1.0-beta

--- a/src/main/resources/assets/ht_laboratory/lang/en_us.json
+++ b/src/main/resources/assets/ht_laboratory/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.ht_laboratory.mortar": "Mortar",
   "block.ht_laboratory.porcelain": "Porcelain",
-  "container.ht_laboratory.mortar": "Mortar"
+  "container.ht_laboratory.mortar": "Mortar",
+  "item.ht_laboratory.beaker": "%s Beaker"
 }
