[WIP] Adding new block Ash Collector - Place this below furnace to collect ashes

--- a/src/main/resources/assets/ht_laboratory/lang/en_us.json
+++ b/src/main/resources/assets/ht_laboratory/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "block.ht_laboratory.ash_collector": "Ash Collector",
   "block.ht_laboratory.mortar": "Mortar",
   "block.ht_laboratory.porcelain": "Porcelain",
   "container.ht_laboratory.mortar": "Mortar",
